LDEV-4054 Updating labels
Updating mainly Norwegian with a dash of Español

--- a/lams_central/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Jul 23 22:50:19 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:17:20 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -207,7 +207,7 @@ error.forgot.password.username  =Vennligst skriv inn et brukernavn
 button.select.another.importfile  =Velg en annen fil for import
 error.forgot.password.incorrect.key  =Foresp\u00f8rselen er ikke riktig eller den er benyttet tidligere. Klikk p\u00e5  "Glemt passordet" for \u00e5 sende en ny foresp\u00f8rsel.
 lessonsearch.title  =S\u00f8k etter studenter i leksjonen.
-lessonsearch.instuctions  =Skriv inn logg-inn navn, deretter for- eller etternavnet til studenten. Etter hvert som du skriver vil navnene til tilh\u00f8rende studenter visesi en pop-up meny.
+lessonsearch.instuctions  =Skriv inn logg-inn navn, deretter for- eller etternavnet til studenten. Etter hvert som du skriver vil navnene til tilh\u00f8rende studenter vises i en pop-up meny.
 lessonsearch.results  =Leksjoner hvor "{0}" er funnet
 index.searchlesson  =S\u00f8k etter studenter.
 index.searchlesson.tooltip  =S\u00f8k etter studenter p\u00e5 tvers av flere leksjoner.
@@ -318,7 +318,7 @@ label.tab.lesson  =Leksjon
 label.tab.class  =Klasse
 label.tab.advanced  =Avansert
 label.tab.conditions  =Betingelser
-label.tab.lesson.title  =Velg hvilken sekvens du skal legge leksjonen til. Klikk deretter p\u00e5 Legg til.
+label.tab.lesson.title  =Velg hvilken leksjon du skal legge til i kurset. Klikk deretter p\u00e5 Legg til.
 label.tab.class.title  =Vennligst trekk over forelesere og studenter
 label.tab.lesson.name  =Leksjons navn:
 label.tab.lesson.size.full  =(vis i full st\u00f8rrelse)
@@ -392,7 +392,7 @@ error.lastname.invalid.characters  =Etternavn inneholder ugyldige karakterer
 error.username.invalid.characters  =Brukernavn kan kun inneholde alfanumeriske karakterer og ingen mellomrom
 error.lessonname.invalid.characters  =Leksjonen inneholder ugyldige karakterer
 audit.admin.loginas  =Systemadministrator {0} har logget p\u00e5 som {1}
-index.monitoring.title  =Ovrv\u00e5king
+index.monitoring.title  =Kontrollmodus
 heading.comments  =Kommentarer
 label.hidden  =Skjulte kommentarer
 label.reply  =Svar
@@ -434,7 +434,7 @@ label.2FA.shared.secret  =To-faktor autentisering delt hemmelig
 label.2FA.login.panel  =Det er p\u00e5krevet med to-stegs autentisering
 label.remove.org.favorite  =Fjern organisasjonen fra dine favoritter
 label.mark.org.favorite  =Merk organisasjonen som favoritt
-label.email.send.me.a.copy  =Sen kopi til meg
+label.email.send.me.a.copy  =Send kopi til meg
 label.password.max.length  =m\u00e5 v\u00e6remindre enn 25 karakterer
 label.password.min.length  =m\u00e5 minimum inneholde {0} karakterer
 label.password.old.must.entered  =Skriv det gamle passordet
@@ -495,7 +495,7 @@ authoring.fla.sequence.validation.issues  =Mens du lagret sekvensen, var det f\u
 authoring.fla.save.successful  =Gratulerer! Ditt design er gyldig og har blitt lagret.
 authoring.fla.liveedit.save.successful  =Endringer ble vellykket brukt.
 authoring.fla.navigate.away.confirm  =Ditt design er ikke lagret. \\ Alle endringer du har gjort siden du sist lagret, vil g\u00e5 tapt.
-authoring.fla.delete.node.confirm  =Er du sikker p\u00e5 at du vil slette dette
+authoring.fla.delete.node.confirm  =Er du sikker p\u00e5 at du vil slette denne
 authoring.fla.sequence.overwrite.confirm  =Er du sikker p\u00e5 at du vil skrive over den eksisterende sekvensen ?
 authoring.fla.new.folder.title.prompt  =Vennligst skriv navnet til den nye mappen
 authoring.fla.rename.title.prompt  =Vennligst skriv navn for
@@ -680,16 +680,16 @@ authoring.fla.boolean.output.suffix  =(Booleske: 1 eller 0)
 lessons  =Leksjoner
 label.tour  =Tur
 tour.intro.title  =LAMS tur
-tour.intro.content  =Denne korte turen vil vise deg funksjonene p\u00e5 hovedskjermbildet LAMS. Du kan stoppe turen til enhver tid ved \u00e5 klikke p\u00e5 End Tour, og starte den p\u00e5 nytt ved \u00e5 klikke p\u00e5 Tour-knappen.
-tour.course.reveal.content  =Klikk her for \u00e5 avsl\u00f8re eller skjule kursene dine.
-tour.courses.content  =Klikk p\u00e5 et kurs for \u00e5 gj\u00f8re det dagens kurs.
+tour.intro.content  =Denne korte turen vil vise deg funksjonene p\u00e5 hovedskjermbildet LAMS. Du kan stoppe turen til enhver tid ved \u00e5 klikke p\u00e5 Avslutt turen, og starte den p\u00e5 nytt ved \u00e5 klikke p\u00e5 Tur-knappen.
+tour.course.reveal.content  =Klikk her for \u00e5 vise eller skjule kurslisten dine.
+tour.courses.content  =Klikk p\u00e5 et kurs for \u00e5 aktivere dette.
 tour.favorites.content  =Dine favoritt kurs vises \u00f8verst p\u00e5 listen.
-tour.lessons.content  =Leksjoner vil vises her for dagens kurs.
+tour.lessons.content  =Leksjonene som er i kurset, vil bli listet her.
 tour.notification.content  =G\u00e5 gjennom anmerkningene du har mottatt om leksjonene dine.
 tour.authoring.content  =Opprett eller modifiser l\u00e6ringsdesignene som brukes til leksjoner.
 tour.user.profile.content  =Oppdater dine personlige innstillinger.
 tour.course.name.title  =Kursnavn
-tour.course.name.content  =N\u00e5v\u00e6rende kursnavn. Klikk p\u00e5 stjernen for \u00e5 legge til dette kurset til dine favoritter i kurslisten.
+tour.course.name.content  =N\u00e5v\u00e6rende kursnavn. Klikk p\u00e5 stjernen for \u00e5 legge dette kurset til dine favoritter i kurslisten.
 tour.add.lesson.content  =Opprett en ny leksjon for dette kurset ved \u00e5 bruke denne knappen, eller en leksjon til en kursundergruppe ved hjelp av Legg til leksjon -knappen ved siden av undergruppens navn.
 tour.add.single.activity.lesson.content  =Bruk piltast ned til \u00e5 velge en aktivitet og deretter lage en leksjon med bare denne enkeltaktiviteten.
 tour.course.gradebook.content  =Se dine karakterer for dette kurset.
@@ -717,13 +717,52 @@ authoring.fla.activity.gate.description  =port
 authoring.fla.activity.branching.description  =grenforbindelse
 tour.prev  =Forh\u00e5ndsvis
 tour.next  =Neste
-tour.end.tour  =Avsluttning av tur
+tour.end.tour  =Avslutte turen
 label.search.for.courses  =S\u00f8k etter kurs
 label.save.as.course.grouping  =Lagre som en kursgruppering
 label.enter.course.grouping.name  =Vennligst skriv inn navn for den nye kursgruppen
 label.course.groups.name.not.unique  =Kursgruppering med et slikt navn finnes allerede. Vennligst skriv inn en annen.
 label.save.as.course.grouping.hint  =Du kan lagre gruppene som "Kursgrupperinger" slik at de ogs\u00e5 kan brukes i andre leksjoner. Hvis gruppene bare er spesifikke for denne leksjonen, kan det hende du ikke vil gj\u00f8re dette. Ellers klikker du p\u00e5 knappen for \u00e5 gi dem et navn og gjenbruk dem senere.
 label.advanced.settings  =Avanserte innstillinger
+audit.delete.portrait  =Portrett for bruker {0} {1}({2}) er slettet. Portrett Id var {3}
+authoring.fla.weights.menu  =Vekt
+authoring.fla.weights.title  =Vekt p\u00e5 aktivitets resultat
+authoring.fla.weights.activity  =Aktivitet
+authoring.fla.weights.output  =Utgangsdata
+authoring.fla.weights.weight  =Vekt
+authoring.fla.weights.sum  =Sum
+authoring.fla.weights.sum.error  =Vekt av resultater summeres ikke til 100%.  Juster dette i vekt dialog.
+label.tab.advanced.field.gradebook.complete  =Vis aktivitet resultat verdi etter ferdigstillelse
+index.kumalive  =Kumalive
+index.kumalive.tooltip  =G\u00e5 inn i en aktiv leksjon
+index.kumalive.enter.learner  =G\u00e5 inn som student
+index.kumalive.report  =Rapporter
+index.kumalive.rubric  =Administrasjon av rubrikker
+label.import.groups.from.template  =Importer grupper fra mal
+label.import.groups.from.template.description  =Last ned regneark malen for \u00e5 lage gruppene dine ved \u00e5 bruke alle de n\u00e5v\u00e6rende elevene i denne leksjonen / kurset. N\u00e5r du laster opp filen, blir gruppene automatisk opprettet i henhold til regnearket.
+label.download.template  =Last ned mal
+label.upload.group.spreadsheet  =Last opp ferdig regneark
+error.file.required  =Gruppert  regneark er n\u00f8dvendig
+error.file.wrong.format  =Det grupperte regnearket er i feil format. Vennligst last opp en fil som er basert p\u00e5 en godkjent mal.
+label.import.successful  =Gruppe importen var vellykket. {0} studenter ble tilordnet grupper, {1} studenter ble utelatt
+label.import.warning.replace.groups  =N\u00e5r du importerer denne filen s\u00e5 vil den erstatte de eksisterende gruppene. Vil du fortsatt importere filen ?
+filename.create.grouping.template  =opprett-gruppering-mal
+spreadsheet.column.login  =Login
+spreadsheet.column.firstname  =Fornavn
+spreadsheet.column.lastname  =Etternavn
+spreadsheet.column.groupname  =Gruppe navn
+error.groups.upload.locked  =Kan ikke oppdatere gruppene fordi gruppene benyttes n\u00e5
+error.branching.upload.must.use.existing.groups  =Kan ikke oppdatere en grenforbindelse. M\u00e5 benytte de eksisterende navnene: {0}.
+label.print  =Skriv ut
+authoring.tbl.desc.peer.review  =Dette er kriteriene som elevene vil vurdere hverandre etter, ved \u00e5 bruke en 5-stjerners vurdering. Disse feltene er valgfrie, og ingen fagfelle vurdering vil bli opprettet dersom de blir satt tomme.
+authoring.section.peerreview  =Fagfelle vurdewring
+authoring.label.peerrevice.criteria.num  =Vurderingskriteria  {0}
+authoring.label.peerrevice.allow.comments  =Tillat studenter \u00e5 kommentere andre studenter
+authoring.label.peerrevice.min.words.in.comments  =Minimum antall  ord i en kommentar
+authoring.create.criteria  =Opprett kriteria
+audit.design.created  =L\u00e6ringsopplegg "{0}" ({1}) er produsert av {2} ({3})
+authoring.fla.save.successful.check.grouping  =Ditt l\u00e6reingsopplegg  er gyldig og har blitt lagret. Vennligst verifiser om du \u00f8nsker \u00e5 gruppere alle aktivitetene
+authoring.fla.weights.none  =Det er ingen aktiviteter med karakterbok med innhold
 
 
-#======= End labels: Exported 718 labels for no NO =====
+#======= End labels: Exported 757 labels for no NO =====
