--- a/lams_common/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_common/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = lams_common
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:23:30 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:18:00 CST 2018 
  
 #=================== labels for LAMS Common =================# 
 
@@ -70,6 +70,8 @@ audit.change.mark  =Endret karakter for bruker {0}. Eldre karakter: {1}, ny kara
 audit.started.editing.activity  =Instrukt\u00f8r {0} har begynt editeringsaktivitet {1} i kontrollmodus
 audit.finished.editing.activity  =Instrukt\u00f8r {0} har avsluttet editeringsaktivitet {1} i kontrollmodus
 audit.cancelled.editing.activity  =Instrukt\u00f8r {0} har avbrudt editeringsaktivitet {1} i kontrollmodus
+audit.tool.prefix  =Verkt\u00f8y {0}:
+audit.change.initiated.by  =Endringen er utf\u00f8rt av
 
 
-#======= End labels: Exported 64 labels for no NO =====
+#======= End labels: Exported 66 labels for no NO =====
