--- a/lams_gradebook/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:30:40 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:19:06 CST 2018 
  
 #=================== labels for Gradebook =================# 
 
@@ -108,6 +108,16 @@ label.marks  =Karakter
 label.number.learners.in.mark.range  =Antall studenter i karakteromr\u00e5det
 label.show.marks.chart  =Vis karakter diagram
 label.hide.marks.chart  =Skjul karakter diagram
+gradebook.summary.activity.marks  =Oppsummering av karakterer
+label.simplified.export  =Forenklet eksport (kun resultater)
+label.button.show.weights  =Vis vekttall
+label.button.hide.weights  =Skjul vekttall
+label.weights.title  =Vekttall p\u00e5 utgangsdata
+gradebook.export.desc  =Velg leksjonen som skal eksporteres ved \u00e5 klikke ved siden av leksjonen i leksjons-oversikten og deretter p\u00e5 "Eksporter".  Du kan velge leksjoner over flere sider  fra leksjonsomr\u00e5det.
+label.hide.lessons.to.export  =Skjul leksjoner som skal eksporteres
+label.activity.marks.weighted  =(Aktivitets karakterer er vektet)
+gradebook.export.max.time.taken.seconds  =*** Oversettelse mangler***
+gradebook.export.min.time.taken.seconds  =*** Oversettelse mangler***
 
 
-#======= End labels: Exported 102 labels for no NO =====
+#======= End labels: Exported 112 labels for no NO =====
