--- a/lams_monitoring/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:22:14 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:17:40 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -268,7 +268,6 @@ lesson.presence  =Tilstede
 sequence.help.info  =Dobbeltklikk p\u00e5 en aktivitet for mer informasjon
 lesson.learner.url  =Leksjonens URL:
 button.select  =Velg
-lesson.copy.prompt  =(trykk n\u00e5 p\u00e5 Ctrl+C for \u00e5 kopiere til kladd)
 learner.group.select.all  =Velg/Fjern alle
 email.notifications.problems.sending.emails  =Det er oppst\u00e5tt et problem ifbm utsendelse av e-post. Vennligst kontakt systemadministrator.
 learner.group.remove.progress  =Du er i ferd med \u00e5 fjerne en student fra leksjonen. Studenten vil ikke ha tilgang til denne leksjonen lengere. Vil du ogs\u00e5 fjerne studentens fremdrift ?
@@ -344,7 +343,7 @@ tour.learner.search.title  =S\u00f8k etter student
 tour.learner.search.content  =Skriv inn et fornavn, etternavn eller innlogging for \u00e5 s\u00f8ke etter en student.
 tour.live.edit.title  =Rediger
 tour.live.edit.content  =Endre leksesekvensen. Du kan bare endre delene som enn\u00e5 ikke er \u00e5pnet av studentene, for eksempel \u00e5 legge til nye aktiviteter senere i sekvensen.
-tour.tab.learners.content  =Elevene gir en student anledning til  \u00e5 se p\u00e5 l\u00e6ringsprosessen. Flere studentet er tilgjengelige via s\u00f8king.
+tour.tab.learners.content  =Foreleseren gir en student anledning til  \u00e5 se p\u00e5 l\u00e6ringsprogresjonen. Flere studenter er tilgjengelige via s\u00f8king.
 tour.learners.progress.content.1  =Bl\u00e5 sirkler angir aktiviteter som er utf\u00f8rt av studenten.
 tour.learners.progress.content.2  =R\u00f8de firkanter angir den n\u00e5v\u00e6rende posisjonen til studenten i sekvensen.
 tour.learners.progress.content.3  =Gr\u00f8nne trekanter representerer aktiviteter som enn\u00e5 ikke er n\u00e5dd.
@@ -404,6 +403,59 @@ tour.progress.email.send.content  =Send en oppsummering av studentene til deg se
 tour.progress.email.configure.title  =Planlegg fremdriftsrapporter
 tour.progress.email.confure.content  =Sett opp datoene for automatisk \u00e5 sende e-post med et sammendrag av studentenes fremgang til alle skjermer for denne leksjonen.
 error.date.in.past  =Utvalgt dato er tidligere.
+audit.lesson.removed.permanently  =Leksjonen "{0}" ({1}) er fjernet permanent.
+audit.lesson.status.changed  =Leksjon "{0}" ({1}) - status er endret fra "{2}" til "{3}"
+tour.gradebook.show.weight  =Vis vekt
+tour.gradebook.show.weight.content  =Vis/skjul aktivitets verdien som benyttes for karakterer ved denne leksjonen
+label.no.learners  =Ingen studenter i gruppen
+label.lesson.finishes  =Leksjon ferdig {0}
+label.lesson.starts  =Leksjonen starter {0}
+button.schedule.disable.tooltip  =Planlegg leksjonen for \u00e5 bli deaktivert i en fremtidig tid
+button.disable.now  =Koble fra n\u00e5
+button.disable.now.tooltip  =Koble fra  leksjonen umiddelbart
+label.reschedule  =Planlegg om igjen
+label.display.activity.scores  =Vis aktivitets verdi etter ferdigstillelse
+lesson.display.activity.scores.alert  =N\u00e5 kan studentene se deres aktivitets verdi ved ferdigstillelse
+lesson.hide.activity.scores.alert  =N\u00e5 kan studentene ikke se deres aktivitets verdi ved ferdigstillelse
+tour.display.activity.scores.content  =Klikk p\u00e5 "Vis aktivitets verdi ved ferdigstillelse " for \u00e5 tillate at studentene kan se deres oppn\u00e5dde verdier n\u00e5r de har gjort ferdig en leksjon. Klikk igjen for \u00e5 koble fra.
+tour.lesson.description  =Leksjonsbeskrivelse vist til studenten n\u00e5r leksjonen lanseres. Det kan endres med Leksjon Innledning-knappen nedenfor.
+tour.edit.lesson.introduction  =Endre leksjonsbeskrivelsen (vist ovenfor). Denne beskrivelsen vises til studenten n\u00e5r leksjonen er lansert.
+label.tbl.monitor  =TBL Monitor
+label.teams  =Grupper
+label.students.teams  =Studentrer og grupper
+label.student  =Student
+label.gates  =Port
+label.ira  =iRA
+label.tra  =tRA
+label.burning.questions  =Burning Qs
+label.forum  =Forum
+label.aes  =AEs
+label.sequence  =Sekves
+label.sequence.diagram  =Sekvens diagram
+label.refresh  =Frisk opp
+label.attendance  =Deltakelse
+label.users.knocking.on.gate  ={0} brukere som banker p\u00e5 porten ...
+label.comparison  =Sammenligning
+label.change.leader  =Endre leder
+label.bar.chart  =Stolpe diagram
+label.score  =Poeng
+label.ira.responses.for  =iRA svar p\u00e5
+label.tra.responses.for  =tRA svar p\u00e5
+label.note.leader.change  =V\u00e6r oppmerksom p\u00e5 at bytte av leder bare vil finne sted for aktivitetene der den eksisterende lederen ikke er definert eller har startet.
+label.current.leader  =Aktiv leder:
+label.leader.successfully.changed  =Leder er endret
+label.view.forum  =Se i forum
+label.switch.to.regular.monitor  =Bytt til vanlig skjerm
+label.peer.review  =Fagfelle vurdering
+email.notifications.archived.export.button  =Eksport
+email.notifications.archived.export.sheet.name  =Merknad
+email.notifications.message.header  =Melding:
+email.notifications.scheduled.messages.button  =Planlagt
+email.notifications.archived.messages.button  =Arkivert
+email.notifications.archived.messages.list  =Liste for arkiverte e-poster
+email.notifications.archived.messages.list.sent.date  =Sendt den
+email.notifications.archived.messages.list.sent.count  =Sendt til
+email.notifications.archived.messages.list.learners  =studenter
 
 
-#======= End labels: Exported 398 labels for no NO =====
+#======= End labels: Exported 450 labels for no NO =====
