--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 21:00:29 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:19:29 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -329,6 +329,7 @@ label.hide.students.choices  =Skjul studentenes valg
 label.print  =Skriv ut
 label.excel.export  =Eksporter til Excel
 label.teams  =Grupper
+label.no.questions.in.question.bank  =Det er ikke lagt til noen sp\u00f8rsm\u00e5l p\u00e5 sp\u00f8rsm\u00e5lslisten. \u00d8nsker du \u00e5 fortsette uten sp\u00f8rsm\u00e5l ?
 
 
-#======= End labels: Exported 323 labels for no NO =====
+#======= End labels: Exported 324 labels for no NO =====
