--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:14:27 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:15:20 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -160,6 +160,9 @@ label.waiting.for.leader  =Vennligst vent til det er avgjort hvem som er gruppel
 label.users.from.group  =Andre studenter som er deltagere i denne gruppen er:
 label.refresh  =Frisk opp igjen skjermbildet
 label.waiting.for.leader.finish  =Vennligst vent til en gruppe leder har avsluttet aktiviteten.
+label.select.leader  =Valg av leder
+label.waiting.for.leader.launch.time.limit  =Lederen har ikke startet aktiviteten. Vennligst vent til lederen har startet.
+label.use.select.leader.tool.output  =Bruk ledere fra lederverkt\u00f8yet
 
 
-#======= End labels: Exported 154 labels for no NO =====
+#======= End labels: Exported 157 labels for no NO =====
