--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 21:05:14 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:19:49 CST 2018 
  
 #=================== labels for Scratchie =================# 
 
@@ -222,6 +222,7 @@ label.tra.results.by.team  =tRA resultat pr gruppe
 label.average  =gjennomsnittlig
 label.print  =Skriv ut
 label.teams.notuppercase  =Grupper
+label.authoring.advanced.show.scratchies.in.results  =Vis resultatet til studentene n\u00e5r de er ferdige
 
 
-#======= End labels: Exported 216 labels for no NO =====
+#======= End labels: Exported 217 labels for no NO =====
