--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:14:55 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:16:51 CST 2018 
  
 #=================== labels for ShareResources =================# 
 
@@ -179,6 +179,9 @@ del.confirmation  =Er du sikker p\u00e5 at du vil slette denne ressursen ?
 label.comments  =Kommentarer
 label.enable.comments  =Legg til kommentarer
 label.view.comments  =Se kommentarer
+label.error  =Feil
+error.loaderror  =En feil oppsto ved lasting av grid. Hvis problemet vedvarer s\u00e5 kontakt systemadministrator.
+label.ok  =OK
 
 
-#======= End labels: Exported 173 labels for no NO =====
+#======= End labels: Exported 176 labels for no NO =====
