--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -330,6 +330,7 @@ label.print  =Print
 label.excel.export  =Excel export
 label.teams  =Teams
 label.no.questions.in.question.bank  =No questions have been added to the question list. Do you still want to proceed with no questions?
+label.authoring.advance.disclose.answers =Disclose learner's and other groups' answers in monitor
 
 
 #======= End labels: Exported 324 labels for en AU =====
