LDEV-4054 Updating labels
Updating Greek

--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 21:05:12 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Apr 05 20:13:29 CST 2018 
  
 #=================== labels for Scratchie =================# 
 
@@ -222,6 +222,7 @@ label.tra.results.by.team  =tRA \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03ad\u03c3
 label.average  =\u03bc\u03ad\u03c3\u03bf\u03c2 \u03cc\u03c1\u03bf\u03c2
 label.print  =\u0395\u03ba\u03c4\u03cd\u03c0\u03c9\u03c3\u03b7
 label.teams.notuppercase  =\u039f\u03bc\u03ac\u03b4\u03b5\u03c2
+label.authoring.advanced.show.scratchies.in.results  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b1\u03c0\u03bf\u03c4\u03b5\u03bb\u03b5\u03c3\u03bc\u03ac\u03c4\u03c9\u03bd \u03c3\u03c4\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2 \u03bc\u03b5\u03c4\u03ac \u03c4\u03b7\u03bd \u03bf\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03ae
 
 
-#======= End labels: Exported 216 labels for el GR =====
+#======= End labels: Exported 217 labels for el GR =====
