--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 21:00:28 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Apr 05 20:12:59 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -329,6 +329,7 @@ label.hide.students.choices  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \
 label.print  =\u0395\u03ba\u03c4\u03cd\u03c0\u03c9\u03c3\u03b7
 label.excel.export  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03c3\u03b5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf Excel
 label.teams  =\u039f\u03bc\u03ac\u03b4\u03b5\u03c2
+label.no.questions.in.question.bank  =\u0394\u03b5\u03bd \u03ad\u03c7\u03bf\u03c5\u03bd \u03c0\u03c1\u03bf\u03c3\u03c4\u03b5\u03b8\u03b5\u03af \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 \u03c3\u03c4\u03b7 \u03bb\u03af\u03c3\u03c4\u03b1 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd. \u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03c0\u03c1\u03bf\u03c7\u03c9\u03c1\u03ae\u03c3\u03b5\u03c4\u03b5 \u03c7\u03c9\u03c1\u03af\u03c2 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2;
 
 
-#======= End labels: Exported 323 labels for el GR =====
+#======= End labels: Exported 324 labels for el GR =====
