--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:14:26 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Apr 05 20:09:29 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -160,6 +160,9 @@ label.waiting.for.leader  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03
 label.users.from.group  =\u0386\u03bb\u03bb\u03bf\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03c0\u03bf\u03c5 \u03c3\u03c5\u03bc\u03bc\u03b5\u03c4\u03ad\u03c7\u03bf\u03c5\u03bd \u03c3\u03c4\u03b7\u03bd \u03c4\u03c1\u03ad\u03c7\u03bf\u03c5\u03c3\u03b1 \u03bf\u03bc\u03ac\u03b4\u03b1:
 label.refresh  =\u0391\u03bd\u03b1\u03bd\u03ad\u03c9\u03c3\u03b7
 label.waiting.for.leader.finish  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce, \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03bc\u03ad\u03c7\u03c1\u03b9 \u03bf \u03a3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03bf\u03bc\u03ac\u03b4\u03b1\u03c2 \u03bd\u03b1 \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03c3\u03b5\u03b9 \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1.
+label.select.leader  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03a3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae
+label.waiting.for.leader.launch.time.limit  =\u039f \u03a3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2 \u03b4\u03b5\u03bd \u03be\u03b5\u03ba\u03af\u03bd\u03b7\u03c3\u03b5 \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1. \u03a0\u03b1\u03c1\u03b1\u03b1\u03ba\u03b1\u03bb\u03ce, \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03bc\u03ad\u03c7\u03c1\u03b9 \u03bd\u03b1 \u03b1\u03c1\u03c7\u03af\u03c3\u03b5\u03b9 \u03bf \u03c3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2.
+label.use.select.leader.tool.output  =\u03a7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03c4\u03b5 - \u03b5\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03c3\u03c5\u03bd\u03c4\u03bf\u03bd\u03c3\u03b9\u03c4\u03ad\u03c2 \u03b1\u03c0\u03cc \u03c4\u03bf \u03b5\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03a3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2
 
 
-#======= End labels: Exported 154 labels for el GR =====
+#======= End labels: Exported 157 labels for el GR =====
