LDEV-4540 Show answers of current team

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -331,6 +331,7 @@ label.excel.export  =Excel export
 label.teams  =Teams
 label.no.questions.in.question.bank  =No questions have been added to the question list. Do you still want to proceed with no questions?
 label.authoring.advance.disclose.answers =Disclose learner's and other groups' answers in monitor
-
+label.learning.summary.team.answers = Your team's answers
+label.learning.summary.other.team.answers =Other teams' answers
 
 #======= End labels: Exported 324 labels for en AU =====
