LDEV-4540 Disclose answers in TBL monitor and reflect it in learner

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -333,5 +333,6 @@ label.no.questions.in.question.bank  =No questions have been added to the questi
 label.authoring.advance.disclose.answers =Disclose learner's and other groups' answers in monitor
 label.learning.summary.team.answers = Your team's answers
 label.learning.summary.other.team.answers =Other teams' answers
-
+label.disclose.correct.answers =Disclose correct answers
+label.disclose.groups.answers =Disclose groups' answers
 #======= End labels: Exported 324 labels for en AU =====
