--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
@@ -100,7 +100,7 @@ messsage.learner.finish.confirm  =Are you going to finish submission?
 label.edit  =Edit
 message.no.reflection.available  =No Notebook available
 error.attachment.executable  =The uploaded file can not be an executable
-message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
+message.alertContentEdit  =Warning: One or more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.warnLockOnFinish  =Note: After you click on "Next Activity" and you come back to this Submit Files, you won't be able to continue adding files.
 message.activityLocked  =The instructor has set this activity not to allow submissions after you have finished it. As you are returning to this activity, you are able to see your files but not allowed to add more.
 monitoring.marked.question  =Marked?
