LDEV-4540 Add "disclose all" buttons to TBL monitor

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -335,4 +335,6 @@ label.learning.summary.team.answers = Your team's answers
 label.learning.summary.other.team.answers =Other teams' answers
 label.disclose.correct.answers =Disclose correct answers
 label.disclose.groups.answers =Disclose groups' answers
+label.disclose.all.correct.answers =Disclose all correct answers
+label.disclose.all.groups.answers =Disclose all groups' answers
 #======= End labels: Exported 324 labels for en AU =====
