LDEV-4545 List activities which should be grouped in TBL sequence

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -761,7 +761,7 @@ authoring.label.peerrevice.allow.comments  =Allow learners to comment on other l
 authoring.label.peerrevice.min.words.in.comments  =Minimum number of words in a comment
 authoring.create.criteria  =Create Criteria
 audit.design.created  =Learning design "{0}" ({1}) created by {2} ({3})
-authoring.fla.save.successful.check.grouping  =Your design is valid and has been saved.\\nYou may want to make all activities grouped, please verify.
+authoring.fla.save.successful.check.grouping  =Your design is valid and has been saved.\\nIf this is a TBL sequence, you may want to make following activities grouped:
 authoring.fla.weights.none  =No activities with weightable gradebook output
 
 #====== Templates
