--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -293,7 +293,7 @@ label.tool.output.has.been.changed  =Tool Output has been changed
 output.desc.first.score  =First score
 output.desc.average.score  =Average score
 label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until he/she commences it.
-label.waiting.for.leader.finish  =Time limit set by teacher is over. Please wait until a group leader finishes the activity.
+label.waiting.for.leader.finish  =Time limit set by teacher is over. Please wait until a group leader submits all answers.
 warn.mark.hedging.wrong.justification  =Justification cannot be left blank
 error.import.file.format  =The import file is not an .xml file.
 label.file  =File
