--- a/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
@@ -17,7 +17,7 @@ message.activity.parallel.partialComplete  =You have to complete the other task 
 message.activity.parallel.noFrames  =Your browser does not handle frames!
 message.activity.options.noActivitySelected  =Please select an activity from the list
 message.activity.options.activityCount  =You must complete at least {0} out of {1} activities to finish.
-message.activity.options.note  =Note: Once you finish any of the above activities you can revisit them by using the progress bar.
+message.activity.options.note  =Note: Once you finish any of the above activities you can revisit them by using the progress bar or by clicking or by clicking on the activity name shown above. 
 label.activity.options.choose  =Choose
 label.synch.gate.title  =Synch gate
 label.synch.gate.message  =You have stopped at a gate. You cannot continue until all of your group/class reach this point.
@@ -60,7 +60,7 @@ label.branching.title  =Branching
 label.sequence.empty.message  =There are no activities to complete in this part of the lesson. Click Next to continue.
 label.my.progress  =My Progress
 label.resume  =Resume
-message.activity.options.note.maximum  =Note: The maximum number of activities you may attempt is {0}. You can revisit started or finished activities by using the progress bar.
+message.activity.options.note.maximum  =Note: The maximum number of activities you may attempt is {0}. You can revisit started or finished activities by using the progress bar or by clicking on the activity name shown above.
 message.activity.set.options.activityCount  =You must complete at least {0} out of {1} sequences to finish.
 message.activity.set.options.note  =Note: Once you finish any of the above sequences you can revisit them by using the progress bar.
 message.activity.set.options.note.maximum  =Note: The maximum number of sequences you may attempt is {0}. You can revisit started or finished sequences by using the progress bar.
