LDEV-4553 Template TBL Assessment offers multiple choice

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -787,10 +787,12 @@ authoring.label.numlearners=Number of learners:
 authoring.error.numlearners=Number of learners must be 1 to 99.
 authoring.error.group.data=Group settings are not correct.
 authoring.section.lessondetails=Lesson Details
-authoring.section.questionsanalysis=Questions & Analysis
+authoring.section.questions=Questions
 authoring.section.applicationexercise=Application Exercise
 authoring.section.introduction=Introduction
 authoring.create.question=Create Question
+authoring.create.essay.question=Create Essay Question
+authoring.create.mc.question=Create Multiple Choice Question
 authoring.label.application.exercise.num=Application Exercise {0}
 authoring.error.application.exercise.num=Application Exercise {0} may not be blank.
 authoring.label.question.num=Question {0}
@@ -804,6 +806,11 @@ button.return.to.template.list=Go back to Template list
 authoring.error.content.id=Content ID is missing
 authoring.error.question.correct.num=One of the answers for Question {0} needs to be correct.
 authoring.error.question.must.have.answer.num=Question {0} must have at least one answer.
+authoring.error.application.exercise.must.have.answer.num=Application Exercise {0} must have at least one answer.
+authoring.error.application.exercise.must.have.100.percent=Application Exercise {0} must have at least one answer worth 100%.
+authoring.error.application.exercise.not.blank.and.grade=Application Exercise {0} may not be blank and must have a grade.
+authoring.label.grade=Grade
+authoring.label.none=None
 
 #=================== Specific to Team Based Learning (TBL) =========================#
 authoring.tbl.template.title=Team Based Learning
