--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -787,10 +787,12 @@ authoring.label.numlearners=Number of learners:
 authoring.error.numlearners=Number of learners must be 1 to 99.
 authoring.error.group.data=Group settings are not correct.
 authoring.section.lessondetails=Lesson Details
-authoring.section.questionsanalysis=Questions & Analysis
+authoring.section.questions=Questions
 authoring.section.applicationexercise=Application Exercise
 authoring.section.introduction=Introduction
 authoring.create.question=Create Question
+authoring.create.essay.question=Create Essay Question
+authoring.create.mc.question=Create Multiple Choice Question
 authoring.label.application.exercise.num=Application Exercise {0}
 authoring.error.application.exercise.num=Application Exercise {0} may not be blank.
 authoring.label.question.num=Question {0}
