LDEV-4054 updating Norwegian

--- a/lams_monitoring/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:17:40 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Apr 24 17:22:05 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -417,7 +417,7 @@ label.reschedule  =Planlegg om igjen
 label.display.activity.scores  =Vis aktivitets verdi etter ferdigstillelse
 lesson.display.activity.scores.alert  =N\u00e5 kan studentene se deres aktivitets verdi ved ferdigstillelse
 lesson.hide.activity.scores.alert  =N\u00e5 kan studentene ikke se deres aktivitets verdi ved ferdigstillelse
-tour.display.activity.scores.content  =Klikk p\u00e5 "Vis aktivitets verdi ved ferdigstillelse " for \u00e5 tillate at studentene kan se deres oppn\u00e5dde verdier n\u00e5r de har gjort ferdig en leksjon. Klikk igjen for \u00e5 koble fra.
+tour.display.activity.scores.content  =Klikk p\u00e5 <b>Vis aktivitets verdi ved ferdigstillelse</b> for \u00e5 tillate at studentene kan se deres oppn\u00e5dde verdier n\u00e5r de har gjort ferdig en leksjon. Klikk igjen for \u00e5 koble fra.
 tour.lesson.description  =Leksjonsbeskrivelse vist til studenten n\u00e5r leksjonen lanseres. Det kan endres med Leksjon Innledning-knappen nedenfor.
 tour.edit.lesson.introduction  =Endre leksjonsbeskrivelsen (vist ovenfor). Denne beskrivelsen vises til studenten n\u00e5r leksjonen er lansert.
 label.tbl.monitor  =TBL Monitor
@@ -456,6 +456,7 @@ email.notifications.archived.messages.list  =Liste for arkiverte e-poster
 email.notifications.archived.messages.list.sent.date  =Sendt den
 email.notifications.archived.messages.list.sent.count  =Sendt til
 email.notifications.archived.messages.list.learners  =studenter
+label.gate.gate.open.user  =av {0}
 
 
-#======= End labels: Exported 450 labels for no NO =====
+#======= End labels: Exported 451 labels for no NO =====
