LDEV-4560 Improved Audit message for force complete

--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -275,7 +275,7 @@ force.complete.remove.content  =You are moving learner "[0]" to activity "[1]". 
 force.complete.remove.content.yes  =Delete content
 force.complete.remove.content.no  =Keep content
 label.schedule.gate.activity.completion.based  =This gate is based on each learner's previous activity completion time
-audit.force.complete  =Attempted to force complete learner {0} to activityId:{1}. LessonId:{2}.
+audit.force.complete  =Attempted to force complete learner {0} to {1}. LessonId:{2}.
 audit.force.complete.end.lesson  =Attempted to force complete learner {0} to the end of the lesson. LessonId:{2}.
 lesson.task.content.edited  =Content being edited
 lesson.task.attention  =This activity requires attention
