LDEV-4564 Audit log entry for Live Edit
Also fixed the learning screen that appears when a Live Edit is
in progress as it was throwing a Null Pointer Exception

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -567,6 +567,7 @@ label.type.mark.released  =Mark Released
 label.type.learner.content.updated  =Learner's Entry Modified
 label.type.learner.content.show.hide  =Learner's Entry Shown/Hidden
 label.type.unknown  =Unknown
+label.type.live.edit  =Live Edit
 label.area.lesson  =Lesson
 label.area.security  =Security
 label.area.notification  =Notification
