--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -818,6 +818,8 @@ authoring.tbl.template.description=Individual and Team Readiness Assessments fol
 authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
+audit.live.edit.start=Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) started by {3} ({4})
+audit.live.edit.end=Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) completed by {3} ({4})
 
 
 #======= End labels: Exported 757 labels for en AU =====
