--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -583,6 +583,6 @@ msg.delete.all.lesson.error  =Error while deleting course lessons lessons
 label.delete.all.lesson.count  =Number of remaining / total lessons:
 label.delete.all.lesson.progress  =Deleting...
 sysadmin.lesson.delete.title  =Delete all lessons from course
-
+audit.remarks=Remarks
 
 #======= End labels: Exported 576 labels for en AU =====
