--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -584,5 +584,5 @@ label.delete.all.lesson.count  =Number of remaining / total lessons:
 label.delete.all.lesson.progress  =Deleting...
 sysadmin.lesson.delete.title  =Delete all lessons from course
 audit.remarks=Remarks
-
+label.no.data.found=No Data Found
 #======= End labels: Exported 576 labels for en AU =====
