--- a/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Apr 07 11:30:18 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 03 17:59:26 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -582,6 +582,8 @@ msg.delete.all.lesson.error  =\u03a3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03ba\u03b1\
 label.delete.all.lesson.count  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03c5\u03c0\u03cc\u03bb\u03bf\u03b9\u03c0\u03c9\u03bd / \u03c3\u03c5\u03bd\u03bf\u03bb\u03b9\u03ba\u03ac \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1:
 label.delete.all.lesson.progress  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae ...
 sysadmin.lesson.delete.title  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u03cc\u03bb\u03c9\u03bd \u03c4\u03c9\u03bd \u03bc\u03b1\u03b8\u03b7\u03bc\u03ac\u03c4\u03c9\u03bd \u03b1\u03c0\u03cc \u03c4\u03bf \u03c0\u03c1\u03cc\u03b3\u03c1\u03b1\u03bc\u03bc\u03b1
+label.type.live.edit  =\u0396\u03c9\u03bd\u03c4\u03b1\u03bd\u03ae \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
+label.no.data.found  =\u0394\u03b5 \u03b2\u03c1\u03ad\u03b8\u03b7\u03ba\u03b1\u03bd \u03b4\u03b5\u03b4\u03bf\u03bc\u03ad\u03bd\u03b1
 
 
-#======= End labels: Exported 576 labels for el GR =====
+#======= End labels: Exported 578 labels for el GR =====
