--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:53:28 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 03 18:06:43 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -567,7 +567,6 @@ label.type.mark.released  =Mark Released
 label.type.learner.content.updated  =Learner's Entry Modified
 label.type.learner.content.show.hide  =Learner's Entry Shown/Hidden
 label.type.unknown  =Unknown
-label.type.live.edit  =Live Edit
 label.area.lesson  =Lesson
 label.area.security  =Security
 label.area.notification  =Notification
@@ -583,6 +582,11 @@ msg.delete.all.lesson.error  =Error while deleting course lessons lessons
 label.delete.all.lesson.count  =Number of remaining / total lessons:
 label.delete.all.lesson.progress  =Deleting...
 sysadmin.lesson.delete.title  =Delete all lessons from course
-audit.remarks=Remarks
-label.no.data.found=No Data Found
-#======= End labels: Exported 576 labels for en AU =====
+label.type.live.edit  =Live Edit
+label.no.data.found  =No data found
+msg.delete.organisation.confirm  =You are about to permanently remove a course. Are you sure want to do this?
+msg.delete.organisation.delete.lessons.confirm  =The course or one of its subcourses still contains lessons. They need to be permanently deleted first. You will be redirected to a page where you can do it.
+config.kumalive.enable  =Enable Kumalive
+
+
+#======= End labels: Exported 581 labels for en AU =====
