LDEV-4565: adding missing label

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu May 03 18:06:43 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu May 03 18:20:59 CST 2018 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -587,6 +587,7 @@ label.no.data.found  =No data found
 msg.delete.organisation.confirm  =You are about to permanently remove a course. Are you sure want to do this?
 msg.delete.organisation.delete.lessons.confirm  =The course or one of its subcourses still contains lessons. They need to be permanently deleted first. You will be redirected to a page where you can do it.
 config.kumalive.enable  =Enable Kumalive
+audit.remarks  =Remarks
 
 
-#======= End labels: Exported 581 labels for en AU =====
+#======= End labels: Exported 582 labels for en AU =====
