--- a/lams_tool_forum/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources.properties
@@ -249,6 +249,8 @@ admin.success  =Configuration successfully saved.
 admin.return  =Return to maintain LAMS
 admin.button.save  =Save
 admin.keep.learner.content  =Don't delete postings when learners are removed from the activity.
-
-
+label.authoring.advance.enable.anonymous.posts =Enable Anonymous Posts
+label.post.anonomously=Post anonymously
+label.anonymous=Anonymous
+label.anonymous.tooltip=Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name in monitoring.
 #======= End labels: Exported 243 labels for en AU =====
