LDEV-4559 Comments can be left anonymously.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -821,5 +821,8 @@ authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add
 audit.live.edit.start=Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) started by {3} ({4})
 audit.live.edit.end=Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) completed by {3} ({4})
 
+label.post.anonomously=Post anonymously
+label.anonymous=Anonymous
+label.anonymous.tooltip=Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name in monitoring.
 
 #======= End labels: Exported 757 labels for en AU =====
