--- a/lams_tool_nb/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_nb/conf/language/lams/ApplicationResources.properties
@@ -60,6 +60,7 @@ advanced.comments.like.only  =Like option only
 advanced.comments.like.and.dislike  =Like and dislike options
 advanced.comment.header  =Comments options
 label.activity.completion  =End of activity
+advanced.enable.anonymous.posts =Enable anonymous posts
 
 
 #======= End labels: Exported 54 labels for en AU =====
