--- a/lams_central/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Apr 05 20:11:08 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed May 09 00:51:31 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -763,6 +763,8 @@ authoring.create.criteria  =\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03
 audit.design.created  =\u039f \u03a3\u03c7\u03b5\u03b4\u03b9\u03b1\u03c3\u03bc\u03cc\u03c2 \u03bc\u03ac\u03b8\u03b7\u03c3\u03b7\u03c2 "{0}" ({1}) \u03b4\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03ae\u03b8\u03b7\u03ba\u03b5 \u03b1\u03c0\u03cc {2} ({3})
 authoring.fla.save.successful.check.grouping  =\u039f \u03c3\u03c7\u03b5\u03b4\u03b9\u03b1\u03c3\u03bc\u03cc\u03c2 \u03c3\u03b1\u03c2 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ad\u03b3\u03ba\u03c5\u03c1\u03bf\u03c2 \u03ba\u03b1\u03b9 \u03ad\u03c7\u03b5\u03b9 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03c4\u03b5\u03af. \\n \u0395\u03ac\u03bd \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03bf\u03bc\u03b1\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03c4\u03b5 \u03cc\u03bb\u03b5\u03c2 \u03c4\u03b9\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b5\u03c2, \u03b5\u03c0\u03b1\u03bb\u03b7\u03b8\u03b5\u03cd\u03c3\u03c4\u03b5.
 authoring.fla.weights.none  =\u0394\u03b5\u03bd \u03c5\u03c0\u03ac\u03c1\u03c7\u03bf\u03c5\u03bd \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b5\u03c2 \u03bc\u03b5 \u03b4\u03b9\u03b1\u03b2\u03b1\u03b8\u03bc\u03b9\u03c3\u03bc\u03ad\u03bd\u03b7 \u03b1\u03be\u03b9\u03bf\u03bb\u03cc\u03b3\u03b7\u03c3\u03b7 \u03c3\u03c4\u03bf \u0392\u03b1\u03b8\u03bc\u03bf\u03bb\u03cc\u03b3\u03b9\u03bf
+audit.live.edit.start  =\u0396\u03c9\u03bd\u03c4\u03b1\u03bd\u03ae \u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03c4\u03bf\u03c5 \u03a3\u03c7\u03b5\u03b4\u03b9\u03b1\u03c3\u03bc\u03bf\u03cd \u039c\u03ac\u03b8\u03b7\u03c3\u03b7\u03c2 "{0}" ({1}) \u03b3\u03b9\u03b1 \u03c4\u03bf \u039c\u03ac\u03b8\u03b7\u03bc\u03b1 ({2}) \u03be\u03b5\u03ba\u03af\u03bd\u03b7\u03c3\u03b5 \u03b1\u03c0\u03cc {3} ({4})
+audit.live.edit.end  =\u0397 \u0396\u03c9\u03bd\u03c4\u03b1\u03bd\u03ae \u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u03a3\u03c7\u03b5\u03b4\u03b9\u03b1\u03c3\u03bc\u03bf\u03cd \u039c\u03ac\u03b8\u03b7\u03c3\u03b7\u03c2 "{0}" ({1}) \u03b3\u03b9\u03b1 \u03c4\u03bf \u039c\u03ac\u03b8\u03b7\u03bc\u03b1 ({2}) \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03b8\u03b7\u03ba\u03b5 \u03b1\u03c0\u03cc {3} ({4})
 
 
-#======= End labels: Exported 757 labels for el GR =====
+#======= End labels: Exported 759 labels for el GR =====
